--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "node --experimental-vm-modules node_modules/.bin/jest"
 	},
 	"author": "",
 	"license": "ISC",
@@ -14,6 +14,7 @@
 		"yargs": "^18.0.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.0.5"
+		"@biomejs/biome": "^2.0.5",
+		"jest": "^30.0.3"
 	}
 }
