fixed some bugs in the README and smoothed out some functionality

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"repo-seek": "./index.mjs"
 	},
 	"scripts": {
-		"test": "node --experimental-vm-modules node_modules/.bin/jest"
+		"test": "node --experimental-vm-modules node_modules/.bin/jest",
+		"dev": "node index.mjs"
 	},
 	"author": "",
 	"license": "ISC",
